[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/Pitch.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/SFX/airhorn.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/SFX/dominoespizzaakacatchme.ogg" type="AudioStream" id=9]
[ext_resource path="res://scripts/DirectionalLight.gd" type="Script" id=10]
[ext_resource path="res://scripts/SpotLight.gd" type="Script" id=11]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.396078, 0.227451, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 11, 5, 1 )

[sub_resource type="Animation" id=3]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Level" type="Spatial"]
script = ExtResource( 1 )

[node name="StartPositions" type="Node" parent="."]
editor/display_folded = true

[node name="BallSpawn" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Player1Start" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0 )

[node name="Player2Start" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )

[node name="Pitch" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10, 12.5 )

[node name="Ball" parent="." groups=[
"Actors",
] instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.999021, -0.0442398, 0, 0.0442398, 0.999021, 0, 5.19464, 0 )

[node name="Player1" parent="." groups=[
"Actors",
] instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0 )
collision_mask = 1

[node name="Player2" parent="." groups=[
"Actors",
] instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )
collision_mask = 1
_player_id = 2

[node name="Goals" type="Node" parent="."]
editor/display_folded = true

[node name="Goal1" parent="Goals" instance=ExtResource( 6 )]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 9.4, 0, 0 )

[node name="GoalMesh" parent="Goals/Goal1" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.72529e-009, 0, 0 )
material/0 = SubResource( 1 )

[node name="Goal2" parent="Goals" instance=ExtResource( 6 )]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -9.4, 0, 0 )

[node name="Boundaries" type="Node" parent="."]
editor/display_folded = true

[node name="BackWall" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.232746, 4, -8.95011 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/BackWall"]
shape = SubResource( 2 )

[node name="BackWall2" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.232746, 4, -7.19285 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/BackWall2"]
shape = SubResource( 2 )

[node name="FrontWall" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 9 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/FrontWall"]
shape = SubResource( 2 )

[node name="FrontWall2" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 6.69569 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/FrontWall2"]
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -12, 4, 0 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/LeftWall"]
shape = SubResource( 2 )

[node name="LeftWall2" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -10.6903, 4, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/LeftWall2"]
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 12, 4, 0 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/RightWall"]
shape = SubResource( 2 )

[node name="RightWall2" type="StaticBody" parent="Boundaries"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 10.8436, 4, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/RightWall2"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="GoalSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[node name="DirectionalLight" type="DirectionalLight" parent="." groups=[
"Actors",
]]
editor/display_folded = true
transform = Transform( 0.652376, -0.555915, 0.515135, 0, 0.679692, 0.733498, -0.757896, -0.478516, 0.443414, 0, 7.81161, 0 )
shadow_enabled = true
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DirectionalLight"]
anims/fade = SubResource( 3 )

[node name="SpotLight" type="SpotLight" parent="." groups=[
"Actors",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 13 )
light_energy = 5.0
spot_range = 25.0
spot_angle = 9.0
script = ExtResource( 11 )
[connection signal="body_entered" from="Goals/Goal1/GoalDetector" to="." method="_on_GoalDetector_body_entered" binds= [ 1 ]]
[connection signal="body_entered" from="Goals/Goal2/GoalDetector" to="." method="_on_GoalDetector_body_entered" binds= [ 2 ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Goals/Goal1"]

[editable path="Goals/Goal2"]
